fix(modal): resolve modal being overlapped by tab bar issue

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -59,7 +59,7 @@
   }
 
   .modal {
-    @apply fixed left-1/2 top-1/2 z-50 w-[calc(100%-2rem)] sm:w-full -translate-x-[calc(50%+1rem)] sm:-translate-x-1/2 -translate-y-1/2 max-w-2xl gap-4 bg-white dark:bg-[#131c2f] border border-slate-100 dark:border-slate-800 p-6 shadow-md transition duration-200 ease-in-out rounded-2xl mx-4 sm:mx-0 overflow-y-auto max-h-[calc(100svh-10rem)] mt-0 mb-10 sm:mb-0 max-sm:[@media(display-mode:standalone)]:max-h-[calc(100svh-16rem)] max-sm:[@media(display-mode:standalone)]:mb-12;
+    @apply fixed left-1/2 top-1/2 z-50 w-[calc(100%-2rem)] sm:w-full -translate-x-[calc(50%+1rem)] sm:-translate-x-1/2 -translate-y-1/2 max-w-2xl gap-4 bg-white dark:bg-[#131c2f] border border-slate-100 dark:border-slate-800 p-6 shadow-md transition duration-200 ease-in-out rounded-2xl mx-4 sm:mx-0 overflow-y-auto max-h-[calc(100svh-16rem)] mt-0 mb-10 sm:mb-0 max-sm:[@media(display-mode:standalone)]:max-h-[calc(100svh-12rem)] max-sm:[@media(display-mode:standalone)]:mb-12;
   }
 
   .modal-large {
